--- a/dento/dental/website/templates/index.html
+++ b/dento/dental/website/templates/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  <title>{% title %}</title>
   <meta charset="UTF-8">
   <meta name="description" content="Dento - Dentist &amp; Medical HTML Template">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +14,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="{% static 'website/img/core-img/favicon.ico' %}">
-
   <!-- Core Stylesheet -->
-  
-  
   <link rel="stylesheet" href="{% static 'website/css/css/default-assets/classy-nav.css' %}">
   <link rel="stylesheet" href="{% static 'website/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'website/css/animate.css' %}">
